[project]
name = "mask24bot-flow-clone"
version = "0.1.0"
description = "Strict Telegram bot clone from captured flow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.21.0",
  "aiofiles>=24.1.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.13.0",
  "ty>=0.0.1a19",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
